# vbsfmt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: fmt.rs  main.rs
src/fmt/: mod.rs
src/lexer/: generated.rs  mod.rs  rules.rs  token.rs
src/parser/: ast.rs  expressions.rs  hierarchy.rs  mod.rs
tests/: it.rs
testscripts/: populate.sh
