[package]
name = "vbsfmt"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "vbsfmt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
diff = "0.1.13"
lazy_static = "1.4.0"
logos = "0.14.0"
regex = "1.10.4"
yansi = "1.0.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
indoc = "2.0.5"
glob = "0.3.1"
