[package]
name = "vbsfmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
diff = "0.1.13"
regex = "1.10.4"
yansi = "1.0.1"

[dev-dependencies]
trim-margin = "0.1.0"
pretty_assertions = "1.4.0"
